# ros2_ws

./: .gitignore  Dockerfile  INSTALL.md  README.md  docker-compose.yml  entrypoint.sh  install_docker_nvidia.sh  requirements.txt  requirements_ros2.repos  ros2_dependencies.txt  rosdep.yaml  script.sh
install/: setup.sh
install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
log/: latest_build  latest_list
notes/: ros2_basics.html  ros2_basics.ipynb
src/arms_sim/: package.xml  setup.cfg  setup.py
src/arms_sim/arms_sim/: auto_motion_explorer.py  package_installer.py  robot_info_extractor.py  tools.py
src/arms_sim/config/: ros2_controllers.yaml
src/arms_sim/launch/: sim_launch.py
src/arms_sim/urdf/: gen3_lite.urdf.xacro
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/src/: gen3_lite_hello_moveit.cpp  hello_moveit.cpp  pose_monitor.cpp
src/kinova_gen3_lite_sim/: README  README.md  package.xml  setup.cfg  setup.py
src/kinova_gen3_lite_sim/config/: ros2_controllers.yaml
src/kinova_gen3_lite_sim/kinova_gen3_lite_sim/: auto_data_collector.py  auto_motion_explorer.py  image_saver.py
src/kinova_gen3_lite_sim/launch/: sim_launch.py
src/kinova_gen3_lite_sim/urdf/: gen3_lite.urdf.xacro
src/kinova_gen3_lite_sim/worlds/: empty_world.sdf
src/moveit2_tutorials/doc/tutorials/quickstart_in_rviz/launch/: gen3lite_demo.launch.py
src/my_robot_controller/: package.xml  setup.py
src/my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  pose_subscriber.py  turtle_controller.py
src/ros2_kortex/kortex_moveit_config/kinova_gen3_lite_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
